external-crates/move/crates/move-compiler/tests/move_2024/parser/mut_keyword.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/mut_keyword.move:5:23
  │
5 │     public fun foo(mut: &mut u64): &mut u64 {
  │                       ^
  │                       │
  │                       Unexpected ':'
  │                       Expected an identifier

error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/mut_keyword.move:6:9
  │
6 │         mut
  │         ^^^
  │         │
  │         Unexpected 'mut'
  │         Expected an expression term
