external-crates/move/crates/move-compiler/tests/move_2024/parser/mut_keyword.move
module a::m {
    public struct S {
        f: u64,
    }
    public fun foo(mut: &mut u64): &mut u64 {
        mut
    }
}
